updated licence docs

--- a/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -12,10 +12,26 @@ product.description.pe = ModuleStudio Professional Edition
 product.name.ee = ModuleStudio EE
 product.description.ee = ModuleStudio Enterprise Edition
 
-product.abouttext.ce = ModuleStudio Community Edition\nVersion: {1}.\n\n\n(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
-product.abouttext.se = ModuleStudio Standard Edition\nVersion: {1}.\n\n\n(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
-product.abouttext.pe = ModuleStudio Professional Edition\nVersion: {1}.\n\n\n(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
-product.abouttext.ee = ModuleStudio Enterprise Edition\nVersion: {1}.\n\n\n(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
+product.abouttext.ce = ModuleStudio Community Edition\n\
+Version: {1}.\n\
+\n\
+\n\
+(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
+product.abouttext.se = ModuleStudio Standard Edition\n\
+Version: {1}.\n\
+\n\
+\n\
+(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
+product.abouttext.pe = ModuleStudio Professional Edition\n\
+Version: {1}.\n\
+\n\
+\n\
+(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
+product.abouttext.ee = ModuleStudio Enterprise Edition\n\
+Version: {1}.\n\
+\n\
+\n\
+(c) 2007-2010 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
 
 introTitle=Willkommen bei ModuleStudio
 introBrandingImageText=ModuleStudio
