updates in the gen model caused by new index type

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -345,6 +345,7 @@ _UI_ModelLoadingType_CONSERVATIVE_literal = CONSERVATIVE
 _UI_ModelLoadingType_AGGRESSIVE_literal = AGGRESSIVE
 _UI_DbTableType_MYISAM_literal = MYISAM
 _UI_DbTableType_INNODB_literal = INNODB
+_UI_EntityIndexType_NORMAL_literal = NORMAL
 _UI_EntityIndexType_UNIQUE_literal = UNIQUE
 _UI_EntityIndexType_FULLTEXT_literal = FULLTEXT
 _UI_EntityIndexType_GIST_literal = GIST
