added new attributes for Upload Fields

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -243,10 +243,19 @@ _UI_AbstractStringField_regexp_feature = Regulärer Ausdruck
 _UI_AbstractStringField_fixed_feature = Fixe Länge
 _UI_AbstractStringField_nospace_feature = Kein Space
 _UI_AbstractStringField_minLength_feature = Min Länge
+_UI_StringField_length_feature = Länge
 _UI_StringField_country_feature = Land
 _UI_StringField_ipaddress_feature = IP-Adresse
 _UI_StringField_htmlcolor_feature = HTML-Farbe
 _UI_StringField_usstate_feature = US-Staat
+_UI_TextField_length_feature = Länge
+_UI_EnumField_length_feature = Länge
+_UI_EmailField_length_feature = Länge
+_UI_UrlField_length_feature = Länge
+_UI_UploadField_length_feature = Länge
+_UI_UploadField_allowedExtensions_feature = Erlaubte Dateiendungen
+_UI_UploadField_namingScheme_feature = Namensschema
+_UI_UploadField_subFolderName_feature = Name Unterverzeichnis
 _UI_ArrayField_length_feature = Länge
 _UI_TimestampField_past_feature = Vergangenheit
 _UI_TimestampField_future_feature = Zukunft
@@ -345,6 +354,9 @@ _UI_ModelLoadingType_CONSERVATIVE_literal = CONSERVATIVE
 _UI_ModelLoadingType_AGGRESSIVE_literal = AGGRESSIVE
 _UI_DbTableType_MYISAM_literal = MYISAM
 _UI_DbTableType_INNODB_literal = INNODB
+_UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
+_UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
+_UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
 _UI_EntityIndexType_NORMAL_literal = NORMAL
 _UI_EntityIndexType_UNIQUE_literal = UNIQUE
 _UI_EntityIndexType_FULLTEXT_literal = FULLTEXT
@@ -355,6 +367,7 @@ _UI_EntityIndexSortingType_DESC_literal = DESC
 _UI_JoinType_LEFT_literal = LEFT
 _UI_JoinType_RIGHT_literal = RIGHT
 _UI_JoinType_INNER_literal = INNER
+_UI_CascadeType_NONE_literal = NONE
 _UI_CascadeType_CASCADE_literal = CASCADE
 _UI_CascadeType_SETNULL_literal = SETNULL
 _UI_CascadeType_NOACTION_literal = NOACTION
