added new field for join relationships to select from different edit behaviors

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -280,6 +280,7 @@ _UI_JoinRelationship_cascadeTypeUpdate_feature = Kaskaden-Art Update
 _UI_JoinRelationship_cascadeTypeDelete_feature = Kaskaden-Art Delete
 _UI_JoinRelationship_inheritKey_feature = Key vererben
 _UI_JoinRelationship_foreignKeyName_feature = Name Fremdschlüssel
+_UI_JoinRelationship_editType_feature = Edit-Typ
 _UI_ManyToManyRelationship_refClass_feature = Ref.-Klasse
 _UI_InheritanceRelationship_strategy_feature = Strategie
 _UI_InheritanceRelationship_columnAggregationField_feature = Column Aggregation Feld
@@ -364,6 +365,10 @@ _UI_EntityIndexType_GIST_literal = GIST
 _UI_EntityIndexType_GIN_literal = GIN
 _UI_EntityIndexSortingType_ASC_literal = ASC
 _UI_EntityIndexSortingType_DESC_literal = DESC
+_UI_RelationEditType_PARENT_CHOOSE_literal = PARENT_CHOOSE
+_UI_RelationEditType_PARENT_CHOOSEEDIT_literal = PARENT_CHOOSEEDIT
+_UI_RelationEditType_PARENT_CHOOSE_CHILD_EDIT_literal = PARENT_CHOOSE_CHILD_EDIT
+_UI_RelationEditType_PARENT_CHOOSEEDIT_CHILD_EDIT_literal = PARENT_CHOOSEEDIT_CHILD_EDIT
 _UI_JoinType_LEFT_literal = LEFT
 _UI_JoinType_RIGHT_literal = RIGHT
 _UI_JoinType_INNER_literal = INNER
