added new generic documentation field to modeling language

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -148,6 +148,7 @@ _UI_Unknown_type = Object
 _UI_Unknown_datatype= Value
 
 _UI_NamedObject_name_feature = Name
+_UI_NamedObject_documentation_feature = Dokumentation
 _UI_Application_author_feature = Autor
 _UI_Application_email_feature = E-Mail
 _UI_Application_url_feature = URL
