added new property for string fields to define language fields

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -249,6 +249,7 @@ _UI_StringField_country_feature = Land
 _UI_StringField_ipaddress_feature = IP-Adresse
 _UI_StringField_htmlcolor_feature = HTML-Farbe
 _UI_StringField_usstate_feature = US-Staat
+_UI_StringField_language_feature = Sprache
 _UI_TextField_length_feature = Länge
 _UI_EnumField_length_feature = Länge
 _UI_EmailField_length_feature = Länge
