upgrading target platform to Indigo; merging editions

--- a/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/de.guite.modulestudio.branding.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -3,32 +3,11 @@ pluginName = ModuleStudio Branding Plug-in
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio Branding Locales Deutsch
 
-product.name.ce = ModuleStudio CE
-product.description.ce = ModuleStudio Community Edition
-product.name.se = ModuleStudio SE
-product.description.se = ModuleStudio Standard Edition
-product.name.pe = ModuleStudio PE
-product.description.pe = ModuleStudio Professional Edition
-product.name.ee = ModuleStudio EE
-product.description.ee = ModuleStudio Enterprise Edition
+product.name = ModuleStudio
+product.description = ModuleStudio
 
-product.abouttext.ce = ModuleStudio Community Edition\n\
-Version: {1}.\n\
-\n\
-\n\
-(c) 2007-2011 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
-product.abouttext.se = ModuleStudio Standard Edition\n\
-Version: {1}.\n\
-\n\
-\n\
-(c) 2007-2011 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
-product.abouttext.pe = ModuleStudio Professional Edition\n\
-Version: {1}.\n\
-\n\
-\n\
-(c) 2007-2011 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
-product.abouttext.ee = ModuleStudio Enterprise Edition\n\
-Version: {1}.\n\
+product.abouttext.ce = ModuleStudio\n\
+Version: {0}.\n\
 \n\
 \n\
 (c) 2007-2011 Axel Guckelsberger. Alle Rechte vorbehalten. ModuleStudio ist eine auf Axel Guckelsberger eingetragene Marke in der Europäischen Union. Eclipse und Built on Eclipse sind Marken der Eclipse Foundation, Inc.
