added missing translation

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -597,3 +597,4 @@ _UI_ContainedelementsPropertyCategory = Enthaltene Elemente
 _UI_BasicdataPropertyCategory = Basis-Daten
 _UI_FurtheroptionsPropertyCategory = Weitere Optionen
 _UI_SizePropertyCategory = Größe
+_UI_BehaviorPropertyCategory = Verhalten
