--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -173,8 +173,8 @@ _UI_Application_views_feature = Views
 _UI_Application_views_description = View-Schichten dieser Anwendung.
 _UI_Application_applicationType_feature = Anwendungsart
 _UI_Application_applicationType_description = Art der modellierten Anwendung. Wird noch nicht verwendet.
-_UI_Models_isDefaultDataSource_feature = Ist Standard-Datenquelle
-_UI_Models_isDefaultDataSource_description = Ob dies die (interne) Standarddatenquelle ist. False steht für externe Datenquellen.
+_UI_Models_defaultDataSource_feature = Standard-Datenquelle
+_UI_Models_defaultDataSource_description = Ob dies die (interne) Standarddatenquelle ist. False steht für externe Datenquellen.
 _UI_Models_application_feature = Anwendung
 _UI_Models_application_description = Referenz zur enthaltenden Anwendung.
 _UI_Models_variables_feature = Variablen
@@ -425,8 +425,8 @@ _UI_ListVar_items_feature = Einträge
 _UI_ListVar_items_description = Liste verfügbarer Einträge in dieser Listenvariable.
 _UI_ListVarItem_name_feature = Name
 _UI_ListVarItem_name_description = Der Name dieses Listeneintrags.
-_UI_ListVarItem_isDefault_feature = Standard
-_UI_ListVarItem_isDefault_description = Ob dieser Eintrag per Standard ausgewählt werden soll oder nicht.
+_UI_ListVarItem_default_feature = Standard
+_UI_ListVarItem_default_description = Ob dieser Eintrag per Standard ausgewählt werden soll oder nicht.
 _UI_TransformObject_container_feature = Container
 _UI_TransformObject_container_description = Referenz zu dem Event Listener, der diese Transformation ausführt.
 _UI_EntityEventListener_operations_feature = Operationen
