added entity property for different change tracking policies

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -237,6 +237,8 @@ _UI_Entity_loggable_feature = Logging
 _UI_Entity_loggable_description = Ob diese Entität Objekt-Logging unterstützen soll oder nicht.
 _UI_Entity_identifierStrategy_feature = Identifier Strategie
 _UI_Entity_identifierStrategy_description = Welche Art Strategie zur ID-Erzeugung verwendet wird.
+_UI_Entity_changeTrackingPolicy_feature = Änderungserkennung
+_UI_Entity_changeTrackingPolicy_description = Wie Änderungen an den Daten erkannt werden.
 _UI_Entity_loggableLogEntryClass_feature = Loggable Log-Eintrag Klasse
 _UI_Entity_loggableLogEntryClass_description = Optionaler Name der Record-Klasse für Log-Einträge.
 _UI_Entity_slugLength_feature = Slug-Länge
@@ -542,6 +544,9 @@ _UI_EntityIdentifierStrategy_AUTO_literal = AUTO
 _UI_EntityIdentifierStrategy_SEQUENCE_literal = SEQUENCE
 _UI_EntityIdentifierStrategy_TABLE_literal = TABLE
 _UI_EntityIdentifierStrategy_IDENTITY_literal = IDENTITY
+_UI_EntityChangeTrackingPolicy_DEFERRED_IMPLICIT_literal = DEFERRED_IMPLICIT
+_UI_EntityChangeTrackingPolicy_DEFERRED_EXPLICIT_literal = DEFERRED_EXPLICIT
+_UI_EntityChangeTrackingPolicy_NOTIFY_literal = NOTIFY
 _UI_EntityTreeType_NONE_literal = NONE
 _UI_EntityTreeType_NESTED_literal = NESTED
 _UI_EntityTreeType_CLOSURE_literal = CLOSURE
