enhanced cascade options

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -569,6 +569,15 @@ _UI_CascadeType_PERSIST_literal = PERSIST
 _UI_CascadeType_REMOVE_literal = REMOVE
 _UI_CascadeType_MERGE_literal = MERGE
 _UI_CascadeType_DETACH_literal = DETACH
+_UI_CascadeType_PERSIST_REMOVE_literal = PERSIST_REMOVE
+_UI_CascadeType_PERSIST_MERGE_literal = PERSIST_MERGE
+_UI_CascadeType_PERSIST_DETACH_literal = PERSIST_DETACH
+_UI_CascadeType_REMOVE_MERGE_literal = REMOVE_MERGE
+_UI_CascadeType_REMOVE_DETACH_literal = REMOVE_DETACH
+_UI_CascadeType_MERGE_DETACH_literal = MERGE_DETACH
+_UI_CascadeType_PERSIST_REMOVE_MERGE_literal = PERSIST_REMOVE_MERGE
+_UI_CascadeType_PERSIST_REMOVE_DETACH_literal = PERSIST_REMOVE_DETACH
+_UI_CascadeType_REMOVE_MERGE_DETACH_literal = REMOVE_MERGE_DETACH
 _UI_CascadeType_ALL_literal = ALL
 _UI_RelationFetchType_LAZY_literal = LAZY
 _UI_RelationFetchType_EAGER_literal = EAGER
