added feature for slug separator

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -247,6 +247,8 @@ _UI_Entity_slugUpdatable_feature = Slug änderbar
 _UI_Entity_slugUpdatable_description = Ob der Slug änderbar sein soll oder nicht.
 _UI_Entity_slugUnique_feature = Slug eindeutig
 _UI_Entity_slugUnique_description = Ob Slug-Werte eindeutig sein sollen oder nicht.
+_UI_Entity_slugSeparator_feature = Slug Trennzeichen
+_UI_Entity_slugSeparator_description = Zeichen zur Trennung von Worten im Slug.
 _UI_Entity_slugStyle_feature = Slug-Stil
 _UI_Entity_slugStyle_description = Der verwendete Slug-Stil.
 _UI_Entity_tree_feature = Tree
