updated model event handler details

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -77,8 +77,7 @@ _UI_PreUpdate_type = Pre Update
 _UI_PostUpdate_type = Post Update
 _UI_PreRemove_type = Pre Remove
 _UI_PostRemove_type = Post Remove
-_UI_LoadClassMetadata_type = Load Class Metadata
-_UI_OnFlush_type = On Flush
+_UI_PostLoad_type = Post Load
 _UI_ReplaceGermanSpecialChars_type = Ersetzung deutscher Sonderzeichen
 _UI_ControllerObject_type = Controller Objekt
 _UI_Transition_type = Übergang
