added ability to mark entities as mapped super classes

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -249,7 +249,9 @@ _UI_Entity_slugSeparator_description = Zeichen zur Trennung von Worten im Slug.
 _UI_Entity_slugStyle_feature = Slug-Stil
 _UI_Entity_slugStyle_description = Der verwendete Slug-Stil.
 _UI_Entity_tree_feature = Tree
-_UI_Entity_tree_description = Ob und welche Art von Tree verwendet werden soll.
+_UI_Entity_tree_description = Ob und welche Art von Baumstruktur verwendet werden soll.
+_UI_Entity_mappedSuperClass_feature = Gemappte Oberklasse
+_UI_Entity_mappedSuperClass_description = Ob dies eine gemappte Oberklasse ist oder eine normale Entität.
 _UI_EntityField_entity_feature = Entität
 _UI_EntityField_entity_description = Entität, die dieses Feld enthält.
 _UI_DerivedField_defaultValue_feature = Standardwert
