added password property for string fields as well as minValue and maxValue for decimal and float fields

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -290,16 +290,24 @@ _UI_IntegerField_aggregationField_feature = Aggregatsfeld
 _UI_IntegerField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
 _UI_IntegerField_version_feature = Version
 _UI_IntegerField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
-_UI_FloatField_length_feature = Länge
-_UI_FloatField_length_description = Die Länge dieses Feldes.
-_UI_FloatField_aggregationField_feature = Aggregatsfeld
-_UI_FloatField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
-_UI_DecimalField_scale_feature = Skalierung
-_UI_DecimalField_scale_description = Die Skalierung.
 _UI_DecimalField_length_feature = Länge
 _UI_DecimalField_length_description = Die Länge (precision) dieses Feldes.
+_UI_DecimalField_scale_feature = Skalierung
+_UI_DecimalField_scale_description = Die Skalierung.
+_UI_DecimalField_minValue_feature = Min Wert
+_UI_DecimalField_minValue_description = Minimaler Wert (0 zum Deaktivieren der Prüfung).
+_UI_DecimalField_maxValue_feature = Max Wert
+_UI_DecimalField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
 _UI_DecimalField_aggregationField_feature = Aggregatsfeld
 _UI_DecimalField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
+_UI_FloatField_length_feature = Länge
+_UI_FloatField_length_description = Die Länge dieses Feldes.
+_UI_FloatField_minValue_feature = Min Wert
+_UI_FloatField_minValue_description = Minimaler Wert (0 zum Deaktivieren der Prüfung).
+_UI_FloatField_maxValue_feature = Max Wert
+_UI_FloatField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
+_UI_FloatField_aggregationField_feature = Aggregatsfeld
+_UI_FloatField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
 _UI_AbstractStringField_fixed_feature = Fixe Länge
 _UI_AbstractStringField_fixed_description = Ob dieses Feld eine fixe Länge hat oder nicht.
 _UI_AbstractStringField_nospace_feature = Kein Space
@@ -308,14 +316,16 @@ _UI_AbstractStringField_minLength_feature = Min Länge
 _UI_AbstractStringField_minLength_description = Die minimale Länge (0 für kein Minimum).
 _UI_AbstractStringField_regexp_feature = Regulärer Ausdruck
 _UI_AbstractStringField_regexp_description = Gegen einen regulären Ausdruck validieren.
+_UI_StringField_country_feature = Land
+_UI_StringField_country_description = Ob dieses Feld einen Länder-Code repräsentiert oder nicht.
 _UI_StringField_language_feature = Sprache
 _UI_StringField_language_description = Ob dieses Feld einen Sprach-Code repräsentiert oder nicht.
 _UI_StringField_length_feature = Länge
 _UI_StringField_length_description = Die Länge dieses Feldes.
-_UI_StringField_country_feature = Land
-_UI_StringField_country_description = Ob dieses Feld einen Länder-Code repräsentiert oder nicht.
 _UI_StringField_htmlcolour_feature = HTML-Farbe
 _UI_StringField_htmlcolour_description = Ob dieses Feld eine HTML-Farbe (wie #336699) repräsentiert oder nicht.
+_UI_StringField_password_feature = Passwort
+_UI_StringField_password_description = Ob dieses Feld ein Kennwort repräsentiert oder nicht.
 _UI_TextField_length_feature = Länge
 _UI_TextField_length_description = Die Länge dieses Feldes.
 _UI_EmailField_length_feature = Länge
