added meta elements for supporting different lock types

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -222,6 +222,8 @@ _UI_Entity_leading_feature = Führend
 _UI_Entity_leading_description = Ob dies die führende Entität ist oder nicht. Die führende Entität wird als Standard und Hauptobjekttyp verwendet.
 _UI_Entity_readOnly_feature = Nur lesen
 _UI_Entity_readOnly_description = Ob diese Entität nur lesbar sein soll oder nicht. Wenn auf true gesetzt, ist keine Editierung möglich.
+_UI_Entity_lockType_feature = Lock-Typ
+_UI_Entity_lockType_description = Die angewendete Locking-Strategie.
 _UI_Entity_geographical_feature = Geographisch
 _UI_Entity_geographical_description = Ob diese Entität Koordinaten speichern soll oder nicht.
 _UI_Entity_standardFields_feature = Standard-Felder
@@ -560,6 +562,14 @@ _UI_EntityIdentifierStrategy_IDENTITY_literal = IDENTITY
 _UI_EntityChangeTrackingPolicy_DEFERRED_IMPLICIT_literal = DEFERRED_IMPLICIT
 _UI_EntityChangeTrackingPolicy_DEFERRED_EXPLICIT_literal = DEFERRED_EXPLICIT
 _UI_EntityChangeTrackingPolicy_NOTIFY_literal = NOTIFY
+_UI_EntityLockType_NONE_literal = NONE
+_UI_EntityLockType_OPTIMISTIC_literal = OPTIMISTIC
+_UI_EntityLockType_PESSIMISTIC_READ_literal = PESSIMISTIC_READ
+_UI_EntityLockType_PESSIMISTIC_WRITE_literal = PESSIMISTIC_WRITE
+_UI_EntityLockType_PAGELOCK_literal = PAGELOCK
+_UI_EntityLockType_PAGELOCK_OPTIMISTIC_literal = PAGELOCK_OPTIMISTIC
+_UI_EntityLockType_PAGELOCK_PESSIMISTIC_READ_literal = PAGELOCK_PESSIMISTIC_READ
+_UI_EntityLockType_PAGELOCK_PESSIMISTIC_WRITE_literal = PAGELOCK_PESSIMISTIC_WRITE
 _UI_EntityTreeType_NONE_literal = NONE
 _UI_EntityTreeType_NESTED_literal = NESTED
 _UI_EntityTreeType_CLOSURE_literal = CLOSURE
