changed property for defining aggregate fields

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -288,8 +288,8 @@ _UI_IntegerField_minValue_feature = Min Wert
 _UI_IntegerField_minValue_description = Minimaler Wert (0 zum Deaktivieren der Prüfung).
 _UI_IntegerField_maxValue_feature = Max Wert
 _UI_IntegerField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
-_UI_IntegerField_aggregationField_feature = Aggregatsfeld
-_UI_IntegerField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
+_UI_IntegerField_aggregateFor_feature = Aggregat für
+_UI_IntegerField_aggregateFor_description = Aggregatsfeld: Eins-zu-Viele Target Alias und Feldname (Syntax: views#amount) was den Generator dazu veranlasst spezielle Methoden zur Aggregation zu erstellen.
 _UI_IntegerField_version_feature = Version
 _UI_IntegerField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
 _UI_DecimalField_length_feature = Länge
