updates after editor regeneration

--- a/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -72,40 +72,32 @@ Boolean1CreationTool_title=Boolean
 Boolean1CreationTool_desc=Ein Boolean-Feld
 Integer2CreationTool_title=Integer
 Integer2CreationTool_desc=Ein Integer-Feld
-Float3CreationTool_title=Flieﬂkommazahl
-Float3CreationTool_desc=Eine Float-Feld 
-Decimal4CreationTool_title=Dezimalzahl
-Decimal4CreationTool_desc=Ein Decimal-Feld
-String5CreationTool_title=String
-String5CreationTool_desc=Ein String-Feld
-Text6CreationTool_title=Text
-Text6CreationTool_desc=Ein Text-Feld
-Email7CreationTool_title=E-Mail
-Email7CreationTool_desc=Ein E-Mail-Feld
-Url8CreationTool_title=URL
-Url8CreationTool_desc=Ein URL-Feld
-Upload9CreationTool_title=Upload
-Upload9CreationTool_desc=Ein Upload-Feld
-User10CreationTool_title=User
-User10CreationTool_desc=Ein Benutzer-Feld
-Array11CreationTool_title=Array
-Array11CreationTool_desc=Ein Array-Feld
-Enum12CreationTool_title=Enum
-Enum12CreationTool_desc=Ein Enumeration-Feld
-Object13CreationTool_title=Objekt
-Object13CreationTool_desc=Ein Objekt-Feld
-Blob14CreationTool_title=Blob
-Blob14CreationTool_desc=Ein bin‰res Feld
-Clob15CreationTool_title=Clob
-Clob15CreationTool_desc=Ein groﬂes Text-Feld
-Timestamp16CreationTool_title=Zeitstempel
-Timestamp16CreationTool_desc=Ein Timestamp-Feld
-Date17CreationTool_title=Datum
-Date17CreationTool_desc=Ein Date-Feld
-Time18CreationTool_title=Zeit
-Time18CreationTool_desc=Ein Time-Feld
-Gzip19CreationTool_title=Gzip
-Gzip19CreationTool_desc=Ein Gzip-Feld
+Decimal3CreationTool_title=Dezimalzahl
+Decimal3CreationTool_desc=Ein Decimal-Feld
+String4CreationTool_title=String
+String4CreationTool_desc=Ein String-Feld
+Text5CreationTool_title=Text
+Text5CreationTool_desc=Ein Text-Feld
+Email6CreationTool_title=E-Mail
+Email6CreationTool_desc=Ein E-Mail-Feld
+Url7CreationTool_title=URL
+Url7CreationTool_desc=Ein URL-Feld
+Upload8CreationTool_title=Upload
+Upload8CreationTool_desc=Ein Upload-Feld
+User9CreationTool_title=User
+User9CreationTool_desc=Ein Benutzer-Feld
+Array10CreationTool_title=Array
+Array10CreationTool_desc=Ein Array-Feld
+Object11CreationTool_title=Objekt
+Object11CreationTool_desc=Ein Objekt-Feld
+Datetime12CreationTool_title=Zeitstempel
+Datetime12CreationTool_desc=Ein Timestamp-Feld
+Date13CreationTool_title=Datum
+Date13CreationTool_desc=Ein Date-Feld
+Time14CreationTool_title=Zeit
+Time14CreationTool_desc=Ein Time-Feld
+Float15CreationTool_title=Flieﬂkommazahl
+Float15CreationTool_desc=Ein Float-Feld 
 BoolVar1CreationTool_title=Bool Var
 BoolVar1CreationTool_desc=Ein Boolean-Feld
 IntegerVar2CreationTool_title=Int Var
@@ -122,10 +114,12 @@ OneToOneRelationship1CreationTool_title=Eins-Zu-Eins-Beziehung
 OneToOneRelationship1CreationTool_desc=Eine Entit‰t einer anderen zuweisen
 OneToManyRelationship2CreationTool_title=Eins-Zu-Viele-Beziehung
 OneToManyRelationship2CreationTool_desc=Eine Entit‰t mehreren anderen zuweisen
-ManyToManyRelationship3CreationTool_title=Viele-Zu-Viele-Beziehung
-ManyToManyRelationship3CreationTool_desc=Mehrere Entit‰ten mehreren anderen zuweisen
-InheritanceRelationship4CreationTool_title=Vererbungs-Beziehung
-InheritanceRelationship4CreationTool_desc=Eine Entit‰t von einer anderen erben lassen
+ManyToOneRelationship3CreationTool_title=Viele-Zu-Eins-Beziehung
+ManyToOneRelationship3CreationTool_desc=Mehrere Entit‰ten einer anderen zuweisen
+ManyToManyRelationship4CreationTool_title=Viele-Zu-Viele-Beziehung
+ManyToManyRelationship4CreationTool_desc=Mehrere Entit‰ten mehreren anderen zuweisen
+InheritanceRelationship5CreationTool_title=Vererbungs-Beziehung
+InheritanceRelationship5CreationTool_desc=Eine Entit‰t von einer anderen erben lassen
 DiagramEditorActionBarAdvisor_DefaultFileEditorTitle=Fehler
 DiagramEditorActionBarAdvisor_DefaultFileEditorMessage=Es ist kein Editor registriert f¸r die Datei "{0}"
 DiagramEditorActionBarAdvisor_DefaultEditorOpenErrorTitle=Offener Editor
