added missing cascade option

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -600,6 +600,7 @@ _UI_CascadeType_REMOVE_DETACH_literal = REMOVE_DETACH
 _UI_CascadeType_MERGE_DETACH_literal = MERGE_DETACH
 _UI_CascadeType_PERSIST_REMOVE_MERGE_literal = PERSIST_REMOVE_MERGE
 _UI_CascadeType_PERSIST_REMOVE_DETACH_literal = PERSIST_REMOVE_DETACH
+_UI_CascadeType_PERSIST_MERGE_DETACH_literal = PERSIST_MERGE_DETACH
 _UI_CascadeType_REMOVE_MERGE_DETACH_literal = REMOVE_MERGE_DETACH
 _UI_CascadeType_ALL_literal = ALL
 _UI_RelationFetchType_LAZY_literal = LAZY
