added possibility to create multiple variables container elements

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -424,6 +424,8 @@ _UI_Variables_vars_feature = Variablen
 _UI_Variables_vars_description = Liste der in diesem Container enthaltenen Variablen.
 _UI_Variables_container_feature = Container
 _UI_Variables_container_description = Die Model-Schicht, die diese Variablen enthält.
+_UI_Variables_sortOrder_feature = Sortierwert
+_UI_Variables_sortOrder_description = Die Sortierungsposition für wenn mehrere Variablen-Sektionen verwendet werden.
 _UI_Variable_name_feature = Name
 _UI_Variable_name_description = Name der Variable.
 _UI_Variable_value_feature = Wert
