minor change of documentation

--- a/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -419,7 +419,7 @@ _UI_ManyToManyRelationship_indexBy_description = Optionaler Feldname, der für ei
 _UI_InheritanceRelationship_strategy_feature = Strategie
 _UI_InheritanceRelationship_strategy_description = Die für diese Relation zu verwendende Vererbungsstrategie.
 _UI_InheritanceRelationship_discriminatorColumn_feature = Discriminator Column
-_UI_InheritanceRelationship_discriminatorColumn_description = Name des Feldes, das als Speicherplatz für die Discriminator Values agiert.
+_UI_InheritanceRelationship_discriminatorColumn_description = Name des Feldes, das als Speicherplatz für den Typ der Entität agiert.
 _UI_Variables_vars_feature = Variablen
 _UI_Variables_vars_description = Liste der in diesem Container enthaltenen Variablen.
 _UI_Variables_container_feature = Container
