added new boolean field property for ajax-based togglability

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -278,6 +278,8 @@ _UI_DerivedField_sortableGroup_feature = Sortable-Gruppe
 _UI_DerivedField_sortableGroup_description = Ob dieses Feld als Gruppierungskriterium für die Sortable-Extension agieren soll.
 _UI_CalculatedField_operands_feature = Operanden
 _UI_CalculatedField_operands_description = Liste von Feldern, die als Operanden während der Berechnung verwendet werden.
+_UI_BooleanField_ajaxTogglability_feature = Ajax Umschalter
+_UI_BooleanField_ajaxTogglability_description = Wenn auf true gesetzt kann man dieses Feld umschalten durch Klicken auf die Feld-Icons auf View- und Display-Seiten.
 _UI_AbstractIntegerField_length_feature = Länge
 _UI_AbstractIntegerField_length_description = Die Länge dieses Feldes.
 _UI_AbstractIntegerField_sortablePosition_feature = Sortable-Position
