added action for importing xml table definitions

--- a/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -16,6 +16,7 @@ applicationActionSetLabel=<Anwendungs-Aktionen
 newDiagramActionLabel=Anwendungs-Diagramm
 websiteActionLabel=Homepage
 generateActionLabel=Anwendung generieren
+importXmlTableDefinitionLabel=XML-Tabellendefinition importieren
 openURIActionLabel=URI öffnen...
 openURIActionDescription=Datei über URI öffnen
 openActionLabel=Öffnen...
