adding list fields for defining dropdowns

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -36,6 +36,8 @@ _UI_UserField_type = Benutzer-Feld
 _UI_EmailField_type = E-Mail-Feld
 _UI_UrlField_type = URL-Feld
 _UI_UploadField_type = Upload-Feld
+_UI_ListField_type = Listen-Feld
+_UI_ListFieldItem_type = Listen-Eintrag
 _UI_ArrayField_type = Array-Feld
 _UI_ObjectField_type = Objekt-Feld
 _UI_AbstractDateField_type = Abstract Date Field
@@ -342,6 +344,18 @@ _UI_UploadField_namingScheme_feature = Namensschema
 _UI_UploadField_namingScheme_description = Wie hochgeladene Dateien physikalisch benannt werden sollen.
 _UI_UploadField_subFolderName_feature = Name Unterverzeichnis
 _UI_UploadField_subFolderName_description = Name des Unterverzeichnisses zur Speicherung dieser Dateien. Falls leer gelassen, wird der Name des Feldes benutzt.
+_UI_ListField_length_feature = Länge
+_UI_ListField_length_description = Die Länge dieses Feldes.
+_UI_ListField_multiple_feature = Mehrfach
+_UI_ListField_multiple_description = Ob mehrere Einträge ausgewählt werden können oder nicht.
+_UI_ListField_items_feature = Einträge
+_UI_ListField_items_description = Liste von Dropdown-Optionen.
+_UI_ListFieldItem_value_feature = Wert
+_UI_ListFieldItem_value_description = Wert dieser Option, kann eine Zahl oder ein String sein.
+_UI_ListFieldItem_image_feature = Bild
+_UI_ListFieldItem_image_description = Optional gebe den Namen einer Core-Icon Datei (extrasmall) ohne Dateiendung ein, zum Beispiel xedit.
+_UI_ListFieldItem_default_feature = Standard
+_UI_ListFieldItem_default_description = Ob dieser Eintrag per Standard ausgewählt werden soll oder nicht.
 _UI_ArrayField_length_feature = Länge
 _UI_ArrayField_length_description = Die Länge dieses Feldes.
 _UI_AbstractDateField_past_feature = Vergangenheit
@@ -628,9 +642,7 @@ _UI_LayoutOrderLengthType_PICAS_literal = PICAS
 
 _UI_PositioningPropertyCategory = Positionierung
 _UI_BehaviourPropertyCategory = Verhalten
-_UI_BehavioursPropertyCategory = Verhalten
 _UI_ContainedelementsPropertyCategory = Enthaltene Elemente
 _UI_BasicdataPropertyCategory = Basis-Daten
 _UI_FurtheroptionsPropertyCategory = Weitere Optionen
 _UI_SizePropertyCategory = Größe
-_UI_BehaviorPropertyCategory = Verhalten
