add property for checkbox lists (instead of dropdowns)

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -348,6 +348,8 @@ _UI_ListField_length_feature = Länge
 _UI_ListField_length_description = Die Länge dieses Feldes.
 _UI_ListField_multiple_feature = Mehrfach
 _UI_ListField_multiple_description = Ob mehrere Einträge ausgewählt werden können oder nicht.
+_UI_ListField_useChecks_feature = Checkboxen verwenden
+_UI_ListField_useChecks_description = Aktivieren um eine Checkbox-Liste zu erstellen (nur für Listen mit Mehrfachauswahl).
 _UI_ListField_items_feature = Einträge
 _UI_ListField_items_description = Liste von Dropdown-Optionen.
 _UI_ListFieldItem_value_feature = Wert
