--- a/production/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -84,20 +84,24 @@ Url7CreationTool_title=URL
 Url7CreationTool_desc=Ein URL-Feld
 Upload8CreationTool_title=Upload
 Upload8CreationTool_desc=Ein Upload-Feld
-User9CreationTool_title=User
-User9CreationTool_desc=Ein Benutzer-Feld
-Array10CreationTool_title=Array
-Array10CreationTool_desc=Ein Array-Feld
-Object11CreationTool_title=Objekt
-Object11CreationTool_desc=Ein Objekt-Feld
-Datetime12CreationTool_title=Zeitstempel
-Datetime12CreationTool_desc=Ein Timestamp-Feld
-Date13CreationTool_title=Datum
-Date13CreationTool_desc=Ein Date-Feld
-Time14CreationTool_title=Zeit
-Time14CreationTool_desc=Ein Time-Feld
-Float15CreationTool_title=Fließkommazahl
-Float15CreationTool_desc=Ein Float-Feld 
+List9CreationTool_title=Liste
+List9CreationTool_desc=Ein Listen-Feld
+ListFieldItem10CreationTool_title=Listen-Eintrag
+ListFieldItem10CreationTool_desc=Ein Listen-Eintrag
+User11CreationTool_title=Benutzer
+User11CreationTool_desc=Ein User-Feld
+Array12CreationTool_title=Array
+Array12CreationTool_desc=Ein Array-Feld
+Object13CreationTool_title=Objekt
+Object13CreationTool_desc=Ein Objekt-Feld
+Datetime14CreationTool_title=Zeitstempel
+Datetime14CreationTool_desc=Ein Timestamp-Feld
+Date15CreationTool_title=Datum
+Date15CreationTool_desc=Ein Date-Feld
+Time16CreationTool_title=Zeit
+Time16CreationTool_desc=Ein Time-Feld
+Float17CreationTool_title=Fließkommazahl
+Float17CreationTool_desc=Ein Float-Feld 
 BoolVar1CreationTool_title=Bool Var
 BoolVar1CreationTool_desc=Ein Boolean-Feld
 IntegerVar2CreationTool_title=Int Var
@@ -134,9 +138,10 @@ WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
 FieldsEditPart_title=Entität  Felder
 EntityIndexesEditPart_title=Entität  Indexe
+ListFieldItemsEditPart_title=Listen-Feld  Einträge
 IndexItemsEditPart_title=Entitäts-Index  Einträge
 ModuleVariablesEditPart_title=Variablen  Vars
-ListItemsEditPart_title=Liste Var  Einträge
+ListVarItemsEditPart_title=Liste Var  Einträge
 
 CommandName_OpenDiagram=Diagramm öffnen
 AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
