--- a/production/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
@@ -43,21 +43,23 @@ metatype.name.TextField_3105=Text
 metatype.name.EmailField_3106=E-Mail
 metatype.name.UrlField_3107=URL
 metatype.name.UploadField_3108=Upload
-metatype.name.UserField_3109=User
-metatype.name.ArrayField_3110=Array
-metatype.name.ObjectField_3111=Objekt
-metatype.name.DatetimeField_3112=Zeitstempel
-metatype.name.DateField_3113=Datum
-metatype.name.TimeField_3114=Zeit
-metatype.name.FloatField_3115=Float
-metatype.name.EntityIndex_3116=Entitäts-Index
-metatype.name.EntityIndexItem_3117=Index-Eintrag
-metatype.name.BoolVar_3118=Bool Var
-metatype.name.IntVar_3119=Int Var
-metatype.name.TextVar_3120=Text Var
-metatype.name.FilePathVar_3121=Dateipfad Var
-metatype.name.ListVar_3122=Liste Var
-metatype.name.ListVarItem_3123=Liste Var Eintrag
+metatype.name.ListField_3109=Liste
+metatype.name.ListFieldItem_3110=Listen-Eintrag
+metatype.name.UserField_3111=Benutzer
+metatype.name.ArrayField_3112=Array
+metatype.name.ObjectField_3113=Objekt
+metatype.name.DatetimeField_3114=Zeitstempel
+metatype.name.DateField_3115=Datum
+metatype.name.TimeField_3116=Zeit
+metatype.name.FloatField_3117=Float
+metatype.name.EntityIndex_3118=Entitäts-Index
+metatype.name.EntityIndexItem_3119=Index-Eintrag
+metatype.name.BoolVar_3120=Bool Var
+metatype.name.IntVar_3121=Int Var
+metatype.name.TextVar_3122=Text Var
+metatype.name.FilePathVar_3123=Dateipfad Var
+metatype.name.ListVar_3124=Liste Var
+metatype.name.ListVarItem_3125=Liste Var Eintrag
 metatype.name.OneToOneRelationship_4101=Eins-Zu-Eins-Beziehung
 metatype.name.OneToManyRelationship_4102=Eins-Zu-Viele-Beziehung
 metatype.name.ManyToOneRelationship_4103=Viele-Zu-Eins-Beziehung
