added property to distinguish relationship represenations between normal dropdown lists and auto completion fields

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -400,6 +400,8 @@ _UI_JoinRelationship_nullable_feature = Null
 _UI_JoinRelationship_nullable_description = Ob Null-Werte erlaubt sein sollen oder nicht.
 _UI_JoinRelationship_unique_feature = Eindeutig
 _UI_JoinRelationship_unique_description = Ob diese Relation eindeutig ist oder nicht.
+_UI_JoinRelationship_useAutoCompletion_feature = Auto Completion verwenden
+_UI_JoinRelationship_useAutoCompletion_description = Ob das Feld durch ein normales Dropdown oder ein Auto Completion Feld repräsentiert wird.
 _UI_JoinRelationship_fetchType_feature = Fetch-Modus
 _UI_JoinRelationship_fetchType_description = Der Fetch Type dieser Relation.
 _UI_JoinRelationship_cascade_feature = Kaskade
